# pyret-rs

./: .gitignore  .gitmodules  Cargo.toml  Cranky.toml  LICENSE  README.md  TODO.md  test.arr
cli/src/: dir.rs  inspector.rs  main.rs  repl.rs  runtime.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: bindings.rs  dir.rs  error.rs  graph.rs  main.rs
crates/cli/src/repl/: helper.rs  mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: lib.rs  token.rs  utils.rs
crates/file/: Cargo.toml  README.md
crates/file/src/: graph.rs  lib.rs
crates/interpreter/: Cargo.toml  README.md
crates/interpreter/inner/: Cargo.toml
crates/interpreter/inner/macros/: Cargo.toml
crates/interpreter/inner/src/: lib.rs  macros.rs
crates/interpreter/inner/src/value/: mod.rs
crates/interpreter/macros/: Cargo.toml  README.md
crates/interpreter/macros/src/: lib.rs  module.rs  trove.rs
crates/interpreter/src/: context.rs  fs.rs  io.rs  lib.rs  macros.rs  ops.rs  registrar.rs
crates/interpreter/src/trove/: arr  mod.rs
crates/interpreter/src/trove/constants/: mod.rs
crates/interpreter/src/trove/global/: boolean.rs  mod.rs  nothing.rs  number.rs  ops.rs  string.rs
crates/interpreter/src/value/: context.rs  function.rs  mod.rs  registrar.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/benches/: lex.rs
crates/lexer/macros/: Cargo.toml  README.md
crates/lexer/macros/src/: common.rs  leaf.rs  lib.rs  node.rs  utils.rs
crates/lexer/macros/src/regex/: item.rs  mod.rs  step.rs
crates/lexer/src/: comment_remover.rs  comments.rs  lib.rs  macros.rs  prelude.rs  state.rs  token.rs
crates/lexer/src/ast/: decl.rs  expr.rs  function.rs  key.rs  lit.rs  mod.rs  stmt.rs  sym.rs
crates/lexer/src/ast/leaf/: app.rs  binary_op.rs  block.rs  boolean.rs  check.rs  comma.rs  comment.rs  dot.rs  end.rs  function.rs  ident.rs  import.rs  mod.rs  number.rs  parenthesis.rs  provide.rs  record.rs  string.rs  type.rs  type_ann.rs  variable.rs
crates/number/: Cargo.toml  README.md
crates/number/src/: lib.rs  macros.rs  math.rs  num.rs  ops.rs  str.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/outside/: index.d.ts  repl.ts
crates/runtime/src/: compiler.rs
crates/runtime/ts/trove/: global.ts
crates/transpiler/: Cargo.toml  README.md
crates/transpiler/src/: bundler.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
lexer/src/: comment_remover.rs  error.rs  macros.rs  regex.rs
lexer/src/ast/: decl.rs  mod.rs  module.rs
runtime/: arr
runtime/src/: builtin.rs  graph.rs  lib.rs
runtime/ts/: tsconfig.json
runtime/ts/base/: numbers.ts
transpiler/src/: lib.rs  utils.rs
wasm/src/: lib.rs
