[package]
authors = ["Lemuel DLS"]
categories = ["compilers", "parser-implementations", "wasm"]
default-run = "pyret"
description = "An implementation of the Pyret programming language."
edition = "2021"
keywords = ["pyret"]
license = "Apache-2.0"
name = "pyret"
version = "0.0.0"

[dependencies]
pyret-error = { path = "../error", verison = "0.0.0" }
pyret-file = { path = "../file", verison = "0.0.0" }
pyret-interpreter = { path = "../interpreter", verison = "0.0.0" }

ansi_term = "0.12.1"
clap = { version = "4.1.8", features = ["derive"] }
dirs-next = "2.0.0"
