[package]
description = "Command-line interface for an implementation of the Pyret programming language."
name = "pyret-cli"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "pyret"
path = "src/main.rs"

[dependencies]
pyret-error = { path = "../error", version = "0.1.0-alpha.0" }
pyret-file = { path = "../file", version = "0.1.0-alpha.0" }
pyret-interpreter = { path = "../interpreter", version = "0.1.0-alpha.0", features = [
  "fs",
  "fancy",
] }
pyret-number = { path = "../number", version = "0.1.0-alpha.0" }

clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.26.1"
dirs-next = "2.0.0"
