[package]
description = "File-handling for an implementation of the Pyret programming language."
name = "pyret-file"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

fancy = ["miette/fancy"]

[dependencies]
miette = "5.5.0"
