[package]
edition = "2021"
name = "pyret-interpreter"
version = "0.0.0"

[features]
default = ["fancy"]

fancy = ["pyret-interpreter-inner/fancy"]

[dependencies]
pyret-interpreter-inner = { path = "./inner", verison = "0.0.0" }
pyret-interpreter-macros = { path = "./macros", verison = "0.0.0" }
pyret-number = { path = "../number", verison = "0.0.0" }
