[package]
edition = "2021"
name = "pyret-lexer"
version = "0.0.0"

[features]
default = ["comments", "fancy"]

comments = []
fancy = ["pyret-error/fancy"]

[dependencies]
pyret-error = { path = "../error", verison = "0.0.0" }
pyret-lexer-macros = { path = "macros", verison = "0.0.0" }
pyret-number = { path = "../number", verison = "0.0.0" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "lex"
