[package]
edition = "2021"
name = "pyret-lexer"
version = "0.1.0-alpha.0"

[features]
default = []

comments = []
fancy = ["pyret-error/fancy"]
serde = ["dep:serde"]

[dependencies]
pyret-error = { path = "../error", version = "0.1.0-alpha.0" }
pyret-lexer-macros = { path = "./macros", version = "0.1.0-alpha.0" }
pyret-number = { path = "../number", version = "0.1.0-alpha.0" }

serde = { version = "1.0.130", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "lex"
