[package]
description = "Lexer for an implementation of the Pyret programming language."
name = "pyret-lexer"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

comments = []
fancy = ["pyret-error/fancy"]
serde = ["dep:serde", "pyret-number/serde"]

[dependencies]
pyret-error = { path = "../error", version = "0.1.0-alpha.0" }
pyret-lexer-macros = { path = "./macros", version = "0.1.0-alpha.0" }
pyret-number = { path = "../number", version = "0.1.0-alpha.0" }

serde = { version = "1.0.130", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "lex"
