[package]
authors = ["Lemuel DLS"]
description = "An implementation of Pyret's numbers."
edition = "2021"
keywords = ["pyret"]
license = "Apache-2.0"
name = "pyret-number"
version = "0.1.0-alpha.0"

[features]
default = []

serde = ["dep:serde", "num-bigint/serde", "num-rational/serde"]

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
num-rational = { version = "0.4.1", default-features = false, features = [
  "num-bigint",
] }
num-traits = { version = "0.2.15", default-features = false }

serde = { version = "1.0.155", optional = true, features = ["derive"] }
