[package]
description = "Number types for an implementation of the Pyret programming language."
name = "pyret-number"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

serde = ["dep:serde", "num-bigint/serde", "num-rational/serde"]

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
num-rational = { version = "0.4.1", default-features = false, features = [
  "num-bigint",
] }
num-traits = { version = "0.2.15", default-features = false }

serde = { version = "1.0.155", optional = true, features = ["derive"] }
