[package]
edition = "2021"
name = "pyret-runtime"
version = "0.1.0"

[features]
default = ["color"]

color = ["swc_common/tty-emitter"]

[dependencies]
anyhow = "1.0.43"
const_format = "0.2.19"
once_cell = "1.8.0"

swc = "0.160.1"
swc_bundler = "0.129.0"
swc_common = { version = "0.17.18" }
swc_ecmascript = { version = "0.139.1", features = [
  "codegen",
  "parser",
  "transforms",
  "visit",
] }
