[package]
description = "An implementation of the Pyret programming language."
edition = "2021"
license = "Apache-2.0"
name = "pyret-wasm"
repository = ""
version = "0.1.0-alpha.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pyret-error = { path = "../error", version = "0.1.0-alpha.0" }
pyret-file = { path = "../file", version = "0.1.0-alpha.0" }
pyret-interpreter = { path = "../interpreter", version = "0.1.0-alpha.0" }
pyret-number = { path = "../number", version = "0.1.0-alpha.0", features = [
  "serde",
] }

console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.93"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
