[package]
edition = "2021"
name = "pyret-lexer-macros"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
once_cell = "1.10.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.15"
re-set = "0.0.3-alpha.0"
regex = "1.5.5"
regex-syntax = "0.6.25"
syn = { version = "1.0.86", features = ["full"] }
