[package]
description = "Macros for the lexer of an implementation of the Pyret programming language."
name = "pyret-lexer-macros"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
once_cell = "1.17.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
re-set = "0.1.0"
regex = "1.7.1"
regex-syntax = "0.6.28"
syn = { version = "1.0.107", features = ["full"] }
